--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@worldcoin/minikit-js": "0.0.27-internal-alpha",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "eruda": "^3.2.3",
+    "ethers": "^6.13.4",
     "lucide-react": "^0.460.0",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
