--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lit-protocol/types": "^6.11.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
@@ -27,6 +28,12 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@lit-protocol/auth-helpers": "^6.11.2",
+    "@lit-protocol/constants": "^6.11.2",
+    "@lit-protocol/contracts-sdk": "^6.11.2",
+    "@lit-protocol/lit-auth-client": "^6.11.2",
+    "@lit-protocol/lit-node-client": "^6.11.2",
+    "@lit-protocol/wrapped-keys": "^6.11.2",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18",
@@ -34,12 +41,6 @@
     "eslint-config-next": "14.2.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "@lit-protocol/auth-helpers": "^6.4.10",
-    "@lit-protocol/constants": "^6.4.10",
-    "@lit-protocol/contracts-sdk": "^6.4.10",
-    "@lit-protocol/lit-auth-client": "^6.11.0",
-    "@lit-protocol/lit-node-client": "^6.11.0",
-    "@lit-protocol/wrapped-keys": "^6.11.0",
     "typescript": "^5.5.4"
   },
   "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
